0.8.1
-----
1. Allow collapsing analyser and mixer settings in settings page.

0.8.0
-----
1. Add option to use 'extended isolation forest' for mixes with 4 or more more
   seed tracks.
2. Add option to set list of media folders to not analyse.
3. Fix Linux ARM analyser and mixer.

0.7.2
-----
1. Bliss analyser should now properly escape JSON strings.
2. Build Linux bliss mixer binary with musl, and not glibc, for better
   portability.
3. Check bliss-analyser can be started on Linux, and if not don't allow
   analysis from settings page.

0.7.1
-----
1. Fix bin path on Windows and macOS.

0.7.0
-----
1. Bundle analyser with plugin.
2. Allow running analyser from settings pages, and after LMS scans.
3. Update to use new bliss-rs analysis results.
4. Add 'exclude christmas' support to list 'similar tracks' - thanks to
   VictorvandenHoven

0.6.0
-----
1. Add 'blissmixer://' protocol handler to allow starting mixes from
   favourites, etc.
2. Store DB file in LMS's prefs folder (as per LMS's persist.db).

0.5.1
-----
1. Update mixer binary, to fix issues with track IDs.

0.5.0
-----
1. Add option to restrict candidate tracks to seed track's genre if seed track
   is not in a genre group.

0.4.1
-----
1. Fix setting of Christmas filter.
2. Only look at audio media dirs when parsing paths.
3. Also send port when sending LMS address to mixer binary.

0.4.0
-----
1. Allow specifying maximum BPM difference between tracks.
2. Fix filtering on Christmas - fix is in bliss-mixer.
3. Fix chroma weight setting.
4. If only have non-local sources then fall back to LastMix.

0.3.1
-----
1. Rebuild Linux binaries on Debian Stretch.

0.3.0
-----
1. Allow genres in genre groups to use wildcard, and other regular expressions.
2. Allow supplying weights for bliss metrics.

0.2.1
-----
1. Re-add vcruntime140.dll to 'Bin/windows'

0.2.0
-----
1. If LMS is password protected, then allow user to specify a specific port on
   which to run the mixer.

0.1.1
-----
1. Fix ARM-64 binary path.
